Wed 30-Aug-2000 23:18:59 BST  Neil Booth  <NeilB@earthling.net>

	* contrib.texi: Add self.

2000-08-30  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.md (cmpeqsi_ior_t, cmpeqsi_and_t): New insns.
	(cmpeqdi_t splitter): Use cmpeqsi_and_t instead of emitting jumps
	and labels.

2000-08-30  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* fixinc/gnu-regex.c: Don't define `const'.

Tue Aug 29 22:09:59 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* expr.c (store_constructor): Allow variable bounds of array type.
	(expand_expr): Don't blow up if type is ERROR_MARK.
	* varasm.c (output_constructor): Don't access lower bound of array
	type unless need it if index is supplied (so it can be a variable
	if no index is supplied).
	Use tree_low_cst; use HOST_WIDE_INT for sizes; change BITPOS to POS.
	Other minor cleanups.

2000-08-29  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* Makefile.in: Revamp handling of cflags to allow different WARN_CFLAGS
	for compilations in stage 1 and subsequent stages, respectively.
	* configure.in (vax): Add compiler-dependent CFLAGS for stage 1.
	* configure: Rebuilt.
	* x-vax, x-vax-gcc: Deleted.

2000-08-29  Zack Weinberg  <zack@wolery.cumb.org>

	* c-common.c (declare_function_name): Use func_id_node,
	function_id_node, and pretty_function_id_node.  Do not make
	__func__ visible at file scope.   
	* c-common.h (c_tree_index): Add CTI_FUNCTION_ID,
	CTI_PRETTY_FUNCTION_ID, and CTI_FUNC_ID.
	(function_id_node, pretty_function_id_node, func_id_node): New
	macros.
	* c-decl.c (init_decl_processing): Initialize function_id_node,
	pretty_function_id_node, and func_id_node.
	(c_make_fname_decl): Correct comment.

	* tree.h (struct tree_identifier): Constify pointer member.

	* c-decl.c (pushdecl, implicit_decl_warning): Constify a char *.
	* c-pragma.h (struct weak_syms): Constify name and value members.
	(add_weak): Constify arguments.   

	* calls.c (special_function_p): Constify a char *.